--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce-app",
   "version": "1.0.0",
   "description": "\"# ecommerce-app-correct-haball\"",
-  "main": "app.js",
+  "main": "server.js",
   "directories": {
     "doc": "docs"
   },
